manifests/local/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
spec:
  template:
    spec:
      automountServiceAccountToken: false
      containers:
        - name: app
          image: todo-api-image
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 10m
            limits:
              cpu: 500m
              memory: 250Mi
          volumeMounts:
            - mountPath: /mnt/data
              name: data
      volumes:
        - name: data
          emptyDir: {}
