manifests/local/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: todo-api
spec:
  containers:
    - name: app
      image: todo-api
      ports:
        - containerPort: 8080
          name: http
