manifests/local/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
spec:
  ports:
    - protocol: TCP
      name: http
      port: 8080
