manifests/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-api
spec:
  ingressClassName: nginx
  rules:
    - host: todo-api.127.0.0.1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: todo-api
                port:
                  name: http
